Make sure app info is aligned properly when hovering an app

--- a/ui/jmvc/ui/resources/css/ui.css
+++ b/ui/jmvc/ui/resources/css/ui.css
@@ -593,7 +593,7 @@ input.account_name { width: 95%; }
 	transition-property: min-height, border-radius, margin, padding, opacity;
 	-webkit-transition-duration: 0.2s; -o-transition-duration: 0.2s; -moz-transition-duration: 0.2s; transition-duration: 0.2s;
 }
-.app:hover, .app_showinfo {
+.app_info_shown {
 	border-color: rgb(204,204,204); border-color: rgba(0,0,0,0.1);
 	background-color: rgb(224,224,224); background-color: rgba(0,0,0,0.1);
 	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.9); -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.9); box-shadow: 0 1px 0 rgba(255,255,255,0.9);
@@ -622,7 +622,7 @@ input.account_name { width: 95%; }
 .carenet_app {
 	position: absolute; top: 0; left: 0; width: 40px; height: 40px; cursor: move;
 	-webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;
-	background: url() center center no-repeat rgb(210,210,210); background-color: rgba(0,0,0,0.15);
+	background: url() center center no-repeat rgb(210,210,210); background-color: rgba(0,0,0,0.15); background-size: 32px;
 	-webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.8); -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.8); box-shadow: 0 1px 0 rgba(255,255,255,0.8);
 	-webkit-transition-property: margin, padding, border-radius;
 	-moz-transition-property: margin, padding, border-radius;
@@ -650,7 +650,6 @@ input.account_name { width: 95%; }
 	-webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background-color: white; background-color: rgba(255,255,255,0.9);
 	-webkit-box-shadow: 0 4px 10px rgba(0,0,0,0.5); -moz-box-shadow: 0 4px 10px rgba(0,0,0,0.5); box-shadow: 0 4px 10px rgba(0,0,0,0.5);
 }
-.app:hover .app_info, .app_showinfo .app_info { display: block; }
 .app_dragged .app_info, .app_dragged:hover .app_info { display: none; }
 .app_info b { font-size: 1.2em; white-space: nowrap; }
 .app_info span { font-size: 0.8em; }
